# VideoResolutionAdjuster

./: .gitignore  CMakeLists.txt  README.md  index.md  main.cpp
core/: CMakeLists.txt  colorspace_converter.cpp  colorspace_converter.h  decoder.cpp  decoder.h  encoder.cpp  encoder.h  main.cpp
gui/: gui.py
